Repositories and models have been made. The project structure has been changed

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,13 @@
-BOT_TOKEN=
+# Бот токен, который получается у @BotFather
+BOT_TOKEN=123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11
+
+# IP БД
+POSTGRES_HOST=127.0.0.1
+# Порт БД
+POSTGRES_HOST_PORT=1234
+# Имя БД
+POSTGRES_DB_NAME=db
+# Юзер БД
+POSTGRES_USER=user
+# Пароль Юзера БД
+POSTGRES_PASSWORD=password
