deleting the migration container

--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,12 @@
 BOT_TOKEN=123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11
 
 # IP БД
-POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=database
 # Порт БД
-POSTGRES_HOST_PORT=1234
+POSTGRES_PORT=5432
 # Имя БД
-POSTGRES_DB_NAME=db
+POSTGRES_DB=test_db
 # Юзер БД
-POSTGRES_USER=user
+POSTGRES_USER=admin
 # Пароль Юзера БД
-POSTGRES_PASSWORD=password
+POSTGRES_PASSWORD=tapwd
