--- a/src/alembic.ini
+++ b/src/alembic.ini
@@ -60,7 +60,9 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://%(POSTGRES_USER)s:%(POSTGRES_PASSWORD)s@%(POSTGRES_HOST)s:%(POSTGRES_PORT)s/%(POSTGRES_DB)s?async_fallback=True
+# %(POSTGRES_HOST)s времмено заменен на 127.0.0.1
+# из-за проблем с БД в докере
+sqlalchemy.url = postgresql+asyncpg://%(POSTGRES_USER)s:%(POSTGRES_PASSWORD)s@127.0.0.1:%(POSTGRES_PORT)s/%(POSTGRES_DB)s?async_fallback=True
 
 
 [post_write_hooks]
