--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     ports: 
       - "5432:5432"
     environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=tapwd
-      - POSTGRES_DB=test_db
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: test_db
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U admin -d test_db" ]
       interval: 10s
