--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,15 @@ services:
     networks:
       - custom
 
+  redis:
+    container_name: redis_cache
+    image: redis:7.4-alpine
+    restart: always
+    ports:
+      - "6379:6379"
+    networks:
+      - custom
+
 
 networks:
   custom:
