fix bot path in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     restart: unless-stopped
     build:
       context: .
-      dockerfile: ./bot/Dockerfile
+      dockerfile: ./src/bot/Dockerfile
     volumes:
       - "/var/voenmeh-bot/logs:/app/logs"
     env_file: .env
